# pega

./: .env.example  .gitignore  README.md  assignment3.ipynb  dim_incidents.db  groq_utils.py  incidents.db  main.py  pyproject.toml  requirements.txt  test.py
app/: api_utils.py  db_utils.py  email_utils.py  main.py
app/pages/: dashboard.py  manual_test.py
data_inputs/: emails.csv
data_output/: results.csv
